# OvertureShim

./: CMakeLists.txt  buildShim.sh  env.sh  makeShim.sh  ogen.check  ogen.cmd  runShim.sh
hydeGrids/: debugTestHDF.hdf  hydeTransitiveWaveOL0.hdf  hydeTransitiveWaveOLCurv0.hdf  sqrInSqr2_hyde.hdf  squareOut.hdf
overtureGrids/: CylInBox0.hdf  SphereInBox0.hdf  emScattering0.hdf  sqrFarTest.cmd  sqrFarfield.hdf  sqrInSqr.cmd  sqrInSqr.hdf  sqrInSqr2.hdf  sqrInSqr3.hdf  sqrInSqr5.hdf  sqrInSqr6.hdf  sqrTest1.hdf  square5.hdf  squaregrid.hdf  transitiveWaveOL0.hdf  transitiveWaveOLCurv0.hdf
primer/: Makefile
src/: Array1D.h  Array2D.h  Array3D.h  Array4D.h  Array4D_V3.h  HydeCompositeGrid.C  HydeCompositeGrid.h  HydeGridData.C  HydeGridData.h  HydeInterpData.C  HydeInterpData.h  Makefile  Makefile.mac  gridPrint.C  gridShim.C  gridShimIn.C  gridShimOut  gridShimOut.C  inAndOut.C  inAndOut.h  inAndOutHDF5.C  inAndOutHDF5.h  sendToHDF5.C  sendToHDF5.h
textOutput/: debugTest.txt  debugTestTXT.txt  sqrInSqr.txt  sqrInSqr2_GridPrint.txt  squareOut.txt
